--- a/package.json
+++ b/package.json
@@ -12,13 +12,16 @@
     "astro": "npx prettier --write . && astro"
   },
   "dependencies": {
-    "astro": "^1.6.10",
-    "firebase": "^9.14.0"
+    "@supabase/supabase-js": "^2.1.1",
+    "astro": "^1.6.10"
   },
   "devDependencies": {
+    "@types/node": "^18.11.9",
     "eslint": "^8.28.0",
     "eslint-plugin-astro": "^0.21.0",
     "prettier": "^2.8.0",
-    "prettier-plugin-astro": "^0.7.0"
+    "prettier-plugin-astro": "^0.7.0",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.9.3"
   }
 }
