--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.1.1",
+    "aos": "^3.0.0-beta.6",
     "astro": "^1.6.10"
   },
   "devDependencies": {
