--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@example/basics",
+  "name": "@snoodev/website",
   "type": "module",
-  "version": "0.0.1",
+  "version": "0.0.9",
   "private": true,
   "scripts": {
     "format": "npx prettier --write .",
